--- a/blog-api/src/main/resources/application-dev.properties
+++ b/blog-api/src/main/resources/application-dev.properties
@@ -12,8 +12,8 @@ blog.view=http://39.105.155.95:8079
 # \u6570\u636E\u5E93\u8FDE\u63A5\u4FE1\u606F
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/nblog?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
-spring.datasource.username=nblog
-spring.datasource.password=NM35rBE5z5Ftp6WT
+spring.datasource.username=root
+spring.datasource.password=Zkogow3312.
 # Redis\u8FDE\u63A5\u4FE1\u606F
 spring.redis.host=127.0.0.1
 spring.redis.password=
