--- a/blog-api/src/main/resources/application-dev.properties
+++ b/blog-api/src/main/resources/application-dev.properties
@@ -5,13 +5,13 @@ blog.name=Zkogow's Blog
 # \u751F\u4EA7\u73AF\u5883\u9700\u8981\u4FEE\u6539\u4E3A\u670D\u52A1\u5668ip\u6216\u57DF\u540D
 # \u540E\u7AEF\u670D\u52A1URL https://api.naccl.top/blog
 #blog.api=http://39.105.155.95:${server.port}
-blog.api=http://api.zkogow.top/blog
+blog.api=https://api.zkogow.top/blog
 # \u540E\u53F0\u7BA1\u7406URL https://admin.naccl.top
 #blog.cms=http://39.105.155.95:8080
-blog.cms=http://admin.zkogow.top
+blog.cms=https://admin.zkogow.top
 # \u524D\u53F0\u754C\u9762URL https://naccl.top
 #blog.view=http://39.105.155.95:8079
-blog.view=http://zkogow.top
+blog.view=https://zkogow.top
 # \u6570\u636E\u5E93\u8FDE\u63A5\u4FE1\u606F
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/nblog?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
