--- a/blog-api/src/main/resources/application-dev.properties
+++ b/blog-api/src/main/resources/application-dev.properties
@@ -1,25 +1,22 @@
 # \u670D\u52A1\u5668\u7AEF\u53E3\u53F7
-server.port=8081
+server.port=8090
 # \u535A\u5BA2\u540D\u79F0
-blog.name=Zkogow's Blog
+blog.name=Naccl's Blog
 # \u751F\u4EA7\u73AF\u5883\u9700\u8981\u4FEE\u6539\u4E3A\u670D\u52A1\u5668ip\u6216\u57DF\u540D
 # \u540E\u7AEF\u670D\u52A1URL https://api.naccl.top/blog
-#blog.api=http://39.105.155.95:${server.port}
-blog.api=https://api.zkogow.top/blog
+blog.api=http://localhost:${server.port}
 # \u540E\u53F0\u7BA1\u7406URL https://admin.naccl.top
-#blog.cms=http://39.105.155.95:8080
-blog.cms=https://admin.zkogow.top
+blog.cms=http://localhost:8080
 # \u524D\u53F0\u754C\u9762URL https://naccl.top
-#blog.view=http://39.105.155.95:8079
-blog.view=https://zkogow.top
+blog.view=http://localhost:8081
 # \u6570\u636E\u5E93\u8FDE\u63A5\u4FE1\u606F
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/nblog?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/nblog?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=Zkogow3312.
+spring.datasource.password=root
 # Redis\u8FDE\u63A5\u4FE1\u606F
 spring.redis.host=127.0.0.1
-spring.redis.password=TCpfQLbD1QeiN6GkfyaW
+spring.redis.password=123456
 spring.redis.port=6379
 spring.redis.database=0
 spring.redis.timeout=10000ms
@@ -69,10 +66,10 @@ http.proxy.server.port=7890
 http.proxy.server.timeout=10000
 
 # \u8BC4\u8BBA\u4E2DQQ\u5934\u50CF\u5B58\u50A8\u65B9\u5F0F: \u672C\u5730:local GitHub:github \u53C8\u62CD\u4E91:upyun
-upload.channel=upyun
+upload.channel=local
 
 # \u9759\u6001\u6587\u4EF6\u4E0A\u4F20\u8BBF\u95EE\u8DEF\u5F84 Windows\u73AF\u5883\u4F8B\u5982: C:/Users/nblog/Desktop/upload/ Linux\u73AF\u5883\u4F8B\u5982\uFF1A/home/nblog/upload/
-upload.file.path=/www/wwwroot/nblog/upload
+upload.file.path=/Users/naccl/Desktop/upload/
 upload.file.access-path=/image/**
 upload.file.resources-locations=file:${upload.file.path}
 
@@ -86,11 +83,11 @@ upload.github.repos=test
 upload.github.repos-path=/comment/avatar
 
 # \u53C8\u62CD\u4E91\u5B58\u50A8\u7A7A\u95F4\u540D\u79F0\uFF0C\u5E2E\u52A9\u6587\u6863\u89C1 https://help.upyun.com/knowledge-base/quick_start/
-upload.upyun.bucket-name=nblog-zkogow
+upload.upyun.bucket-name=nblog
 # \u64CD\u4F5C\u5458\u540D\u79F0
-upload.upyun.username=zkogow
+upload.upyun.username=naccl
 # \u64CD\u4F5C\u5458\u5BC6\u7801
-upload.upyun.password=9SdSXYhvwclfzpFJzKm5wwpkSBAZxZYx
+upload.upyun.password=xxxxxxxxxxxxxxxxxxxxxxxxxxxx
 # \u5B58\u50A8\u8DEF\u5F84
 upload.upyun.path=/comment/avatar
 # CDN\u8BBF\u95EE\u57DF\u540D
